335: FIx vertical spacing on column view

--- a/internal/server/public/styles/file-explorer.css
+++ b/internal/server/public/styles/file-explorer.css
@@ -1191,6 +1191,9 @@
 	align-items: center;
 }
 
+#file-explorer-view-content {
+	margin-top: var(--spacing-md);
+}
 
 /* View Switcher */
 .view-switcher {
